Add unified memory.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 .PHONY: all
-all: no_stream with_stream zero_copy
+all: no_stream with_stream zero_copy unified_buff
 
 no_stream: no_stream.cu
 	nvcc no_stream.cu -o ../bin/no_stream
@@ -10,10 +10,14 @@ with_stream: with_stream.cu
 zero_copy: zero_copy.cu
 	nvcc zero_copy.cu -o ../bin/zero_copy
 
+unified_buff: unified_buff.cu
+	nvcc unified_buff.cu -o ../bin/unified_buff
+
 run:
 	../bin/no_stream
 	../bin/with_stream
 	../bin/zero_copy
+	../bin/unified_buff
 
 clean:
-	rm - rf ../bin/
+	rm -rf ../bin/*
